pkg/lang/syntax/testdata/ub/lower/invalid/project-lock-toolchain-schema-errors.ub
project-lock: {
  version: 1
  toolchain: {}
  deps: {}
}
